syntax = "proto3";
package waves.events;
option java_package = "com.wavesplatform.events.protobuf";

import "waves/block.proto";
import "waves/amount.proto";
import "waves/transaction.proto";

message BlockchainUpdated {
    bytes id = 1;
    int32 height = 2;

    message Append {
        oneof body {
            Block block = 1;
            SignedMicroBlock micro_block = 2;
        }
        repeated bytes transaction_ids = 3;

        StateUpdate state_update = 11;
        repeated StateUpdate transaction_state_updates = 12;
    }

    enum Rollback {
        BLOCK = 0;
        MICROBLOCK = 1;
    }

    oneof update {
        Append append = 11;
        Rollback rollback = 12;
    }
}

message StateUpdate {
    message BalanceUpdate {
        bytes address = 1;
        Amount amount = 2;
    }
    repeated BalanceUpdate balances = 1;

    message LeasingUpdate {
        bytes address = 1;
        int64 in = 2;
        int64 out = 3;
    }
    repeated LeasingUpdate leases = 2;

    message DataEntryUpdate {
        bytes address = 1;
        DataTransactionData.DataEntry data_entry = 2;
    }
    repeated DataEntryUpdate data_entries = 3;
}
